Adding sbt options to dockerfile